fix dropdown align, icons and title, and storybook

--- a/src/components/Dropdown/scss/styles/dropdown.scss
+++ b/src/components/Dropdown/scss/styles/dropdown.scss
@@ -234,6 +234,10 @@
     }
   }
 
+  & > .btn-sm + .dropdown-menu {
+    top: 36px !important;
+  }
+
   .dropdown-menu {
     font-family: $font-family;
     border-radius: $menu-border-radius;
@@ -242,6 +246,17 @@
     padding: $menu-padding-y $menu-padding-x;
     border-color: $menu-border-color;
     box-shadow: 0 0.25rem 1.5rem $menu-box-shadow-color;
+    transform: translate3d(0px, 0px, 0px) !important;
+    inset: unset !important;
+    position: absolute !important;
+    top: 44px !important;
+    min-width: 8rem;
+    width: fit-content;
+
+    &.dropdown-menu-end {
+      left: auto !important;
+      right: 0 !important;
+    }
 
     &--list {
       padding-left: 0;
@@ -253,7 +268,8 @@
       padding: $menu-item-padding-y $menu-item-padding-x;
       text-decoration: none;
       color: $menu-item-color;
-      min-width: $menu-item-min-width;
+      min-width: fit-content;
+      max-width: 100%;
 
       & > span {
         padding-right: 0.5rem;
